[java-dfa] Floating point processing: cosmetic fixes
GitOrigin-RevId: f073627993867ae7aebeba8cb8815152904e975f