@@ -1,11 +1,10 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0f license that can be found in the LICENSE file.
 package com.intellij.codeInspection.dataFlow.types;
 
 import com.intellij.codeInspection.dataFlow.value.RelationType;
 import com.intellij.psi.PsiPrimitiveType;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.Set;
 
 class DfFloatConstantType extends DfConstantType<Float> implements DfFloatType {
@@ -34,7 +33,7 @@ class DfFloatConstantType extends DfConstantType<Float> implements DfFloatType {
       case GT:
         return new DfFloatNotValueType(value == 0.0f ? Set.of(0.0f, -0.0f, Float.NaN) : Set.of(value, Float.NaN));
       case NE:
-        return new DfFloatNotValueType(value == 0.0f ? Set.of(0.0f, -0.0f) : Set.of(value));
+        return new DfFloatNotValueType(value == 0.0f ? FLOAT_ZERO_SET : Set.of(value));
       case LE:
       case GE:
         return new DfFloatNotValueType(Set.of(Float.NaN));
@@ -52,7 +51,7 @@ class DfFloatConstantType extends DfConstantType<Float> implements DfFloatType {
   @NotNull
   @Override
   public DfType tryNegate() {
-    return new DfFloatNotValueType(Collections.singleton(getValue()));
+    return new DfFloatNotValueType(Set.of(getValue()));
   }
 
   @Override
